--- a/main.ipynb
+++ b/main.ipynb
@@ -10,6 +10,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "\n",
+    "import torch \n",
+    "import torchaudio\n",
+    "\n",
+    "import prepare_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<prepare_dataset.SPEECHCOMMANDS at 0x7feba66ef7c0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepare_dataset.SPEECHCOMMANDS(\"./data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2.26G/2.26G [12:50<00:00, 3.15MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = prepare_dataset.SPEECHCOMMANDS(\"./data\", download=True, subset=\"training\")\n",
+    "valid_data = prepare_dataset.SPEECHCOMMANDS(\"./data\", download=True, subset=\"validation\")\n",
+    "test_data = prepare_dataset.SPEECHCOMMANDS(\"./data\", download=True, subset=\"testing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training length: 84843\n",
+      "Validation length: 9981\n",
+      "Testing length: 11005\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Training length: {len(train_data)}\")\n",
+    "print(f\"Validation length: {len(valid_data)}\")\n",
+    "print(f\"Testing length: {len(test_data)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -17,8 +93,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ea3e9d44676e53d067b20c1e2b0aacc847e3e53ef51186a02d87f52450540b7c"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 ('audio_env')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
