error in download

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,9 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (prepare_dataset.py, line 37)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/Users/stephen/opt/anaconda3/envs/audio_env/lib/python3.9/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3457\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/m3/ywsrz7k170vbk8511l1h_6840000gn/T/ipykernel_14268/3851928915.py\"\u001b[0;36m, line \u001b[0;32m8\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import prepare_dataset\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/stephen/code/speech_aws_project/prepare_dataset.py\"\u001b[0;36m, line \u001b[0;32m37\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import numpy as np \n",
@@ -26,37 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<prepare_dataset.SPEECHCOMMANDS at 0x7feba66ef7c0>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "prepare_dataset.SPEECHCOMMANDS(\"./data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2.26G/2.26G [12:50<00:00, 3.15MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = prepare_dataset.SPEECHCOMMANDS(\"./data\", download=True, subset=\"training\")\n",
     "valid_data = prepare_dataset.SPEECHCOMMANDS(\"./data\", download=True, subset=\"validation\")\n",
@@ -65,19 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training length: 84843\n",
-      "Validation length: 9981\n",
-      "Testing length: 11005\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Training length: {len(train_data)}\")\n",
     "print(f\"Validation length: {len(valid_data)}\")\n",
@@ -86,24 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[-0.0658, -0.0709, -0.0753,  ..., -0.0700, -0.0731, -0.0704]]),\n",
-       " 16000,\n",
-       " 'backward',\n",
-       " '0165e0e8',\n",
-       " 0)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data[0]"
    ]
